# nr-graph-lib

./: CMakeLists.txt  Debug.mk  Makefile  README.md  Release.mk  nr-graph-lib.sublime-project
cmake/: FindCairo.cmake  SublimeTextProject.cmake  SublimeTextProject.cmake.in
sources/: Brush.cpp  CMakeLists.txt  Color.cpp  Error.cpp  Gradient.cpp  GraphBrush.cpp  GraphBrush.h  GraphColor.cpp  GraphColor.h  GraphError.cpp  GraphError.h  GraphGradient.cpp  GraphGradient.h  GraphLine.cpp  GraphLine.h  GraphLinearGradient.cpp  GraphLinearGradient.h  GraphPainter.cpp  GraphPainter.h  GraphPen.cpp  GraphPen.h  GraphPoint.cpp  GraphPoint.h  GraphRadialGradient.cpp  GraphRadialGradient.h  GraphRectangle.cpp  GraphRectangle.h  GraphSize.cpp  GraphSize.h  GraphSurface.cpp  GraphSurface.h  Line.cpp  LinearGradient.cpp  Painter.cpp  Pen.cpp  RadialGradient.cpp  Rectangle.cpp  Size.cpp  Surface.cpp  linear_gradient.cpp  (+1 more)
sources/include/NRGraph/: Brush.h  Color.h  Error.h  Gradient.h  Line.h  LinearGradient.h  Painter.h  Pen.h  Point.h  RadialGradient.h  Rectangle.h  Size.h  Surface.h  linear_gradient.h  radial_gradient.h
src/: Error.cpp  Gradient.cpp  LinearGradient.cpp  RadialGradient.cpp  Size.cpp  Surface.cpp
src/include/NRGraph/: Brush.h  Error.h  Line.h  LinearGradient.h  Painter.h  Pen.h  Point.h  RadialGradient.h
